--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@shadcn/ui": "^0.0.4",
+    "cytoscape": "^3.30.2",
+    "cytoscape-qtip": "^2.8.0",
+    "jquery": "^3.7.1",
+    "lucide-react": "^0.453.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
