--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
